<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_50"
        android:gravity="center_horizontal|center_vertical">

        <ImageView
            android:id="@+id/exception_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/common_icon_data_error"/>

        <TextView
            android:id="@+id/exception_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_server_exception_title"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="bold"
            android:textColor="@color/network_text_color"
            android:textSize="@dimen/sp_17"/>

        <TextView
            android:id="@+id/exception_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_14"
            android:visibility="visible"
            android:text="@string/common_server_exception_description"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="@color/exception_description_text_color"
            android:layout_marginTop="@dimen/dp_10"/>

        <!---重新加载按钮-->
        <RelativeLayout
            android:id="@+id/rl_btn_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp_25"
           android:background="@drawable/shape_common_btn_bg">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_35"
                android:paddingEnd="@dimen/dp_35"
                android:paddingTop="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_5"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/btn_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="@dimen/sp_17"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
